cabal-version:       2.4

name:                arproute
version:             0.1.1.0
synopsis:            ARProute
                     bindings for some of the functions available in iproute2
                     additionally, ARP routing via arpping
                     the purpose is to enable routed connectivity over unnumbered network interfaces, using host loopback addresses
                     this simplifies configuration in complex virtual topologies
homepage:            https://github.com/hdb3/arproute
license:             Apache-2.0
license-file:        LICENSE
author:              Nicholas Hart
maintainer:          nic@hdb3.net
copyright:           Nicholas Hart
category:            Network
extra-source-files:  README.md

executable arprouted
  main-is:             ARPRouter.hs
  other-modules:       IPRoute, Util
  other-extensions:    OverloadedStrings
  build-depends:       base ^>=4.12.0, iproute ^>=1.7.7, process ^>=1.6.5
  default-language:    Haskell2010

executable mesh
  main-is:             Mesh.hs
  --other-modules:
  other-extensions:    OverloadedStrings
  build-depends:       base ^>=4.12.0
  default-language:    Haskell2010

executable getmac
  main-is:             GetMAC.hs
  other-modules:       VirtXML
  other-extensions:    OverloadedStrings
  build-depends:       base ^>=4.12.0, xml ^>=1.3.14, bytestring ^>=0.10.8
  default-language:    Haskell2010
